--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "glslify-loader": "^2.0.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "lil-gui": "^0.16.0",
     "mini-css-extract-plugin": "^2.1.0",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
