--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "raw-loader": "^4.0.2",
     "style-loader": "^3.0.0",
     "three": "^0.130.1",
+    "vercel": "^23.1.2",
     "webpack": "^5.42.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
